@@ -45,11 +45,6 @@
 #define ACE_STRCASECMP_EQUIVALENT ::_stricmp
 #define ACE_STRNCASECMP_EQUIVALENT ::_strnicmp
 #define ACE_WCSDUP_EQUIVALENT ::_wcsdup
-#if defined (ACE_HAS_WINCE)
-# define ACE_FILENO_EQUIVALENT ::_fileno
-#else
-# define ACE_FILENO_EQUIVALENT(X) (_get_osfhandle (::_fileno (X)))
-#endif
 
 #if !defined (ACE_HAS_WINCE) && !defined (ACE_HAS_EXCEPTIONS)
 #define ACE_HAS_EXCEPTIONS
