@@ -1,3 +1,9 @@
+Wed Oct 28 11:58:21 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/config-win32-msvc-7.h:
+          Reverted: Tue Oct 27 19:40:59 UTC 2009  Olli Savia  <ops@iki.fi>
+          It seems that VC7 doesn't support _get_osfhandle.
+
 Wed Oct 28 11:54:03 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/Log_Msg.h:
